[gd_scene load_steps=10 format=3 uid="uid://wholkngbrvw6"]

[ext_resource type="Script" uid="uid://dctmmyvmvyhyu" path="res://Scripts/sala_e_1.gd" id="1_ccymm"]
[ext_resource type="Texture2D" uid="uid://1ni5f36dg7dc" path="res://assets/web-memories-1x.png" id="2_4x8vr"]
[ext_resource type="Texture2D" uid="uid://dbvjwx3kikjre" path="res://assets/left_door1.png" id="3_bsevs"]
[ext_resource type="Texture2D" uid="uid://bx8nnfl7frjdj" path="res://assets/left_door2.png" id="4_bsevs"]
[ext_resource type="VideoStream" uid="uid://dy73ydedca57r" path="res://assets/videos/Kamen-Rider-Ryuki-Opening-Theme-Song-2002.ogv" id="4_pjg8g"]
[ext_resource type="FontFile" uid="uid://c2eefbhm14asl" path="res://assets/fontes/pixel_operator/PixelOperator-Bold.ttf" id="5_3bj2o"]
[ext_resource type="Texture2D" uid="uid://yxqcxy5sagb7" path="res://assets/right_door1.png" id="5_bsevs"]
[ext_resource type="Texture2D" uid="uid://b5o701s3sc4d5" path="res://assets/right_door2.png" id="6_w6rf5"]
[ext_resource type="Texture2D" uid="uid://pobdgcu0lq5m" path="res://assets/quadro_grande.png" id="9_jjmmt"]

[node name="salaE1" type="Node2D"]
script = ExtResource("1_ccymm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4x8vr")

[node name="quadro" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(595.5, 228)
scale = Vector2(0.973941, 0.973684)
texture = ExtResource("9_jjmmt")

[node name="continuar" type="TextureButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.837
anchor_bottom = 0.837
offset_top = -259.376
offset_right = 192.0
offset_bottom = 82.624
texture_normal = ExtResource("3_bsevs")
texture_hover = ExtResource("4_bsevs")

[node name="voltar" type="TextureButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.846
anchor_right = 1.0
anchor_bottom = 0.846
offset_left = -204.0
offset_top = -263.208
offset_right = -12.0
offset_bottom = 78.792
grow_horizontal = 0
texture_normal = ExtResource("5_bsevs")
texture_hover = ExtResource("6_w6rf5")

[node name="video" type="VideoStreamPlayer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.381
anchor_right = 0.5
anchor_bottom = 0.381
offset_left = -402.0
offset_top = -212.888
offset_right = 445.0
offset_bottom = 172.112
stream = ExtResource("4_pjg8g")
autoplay = true
paused = true
expand = true

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.659
anchor_right = 0.546
anchor_bottom = 0.659
offset_left = -56.0
offset_top = 13.968
offset_right = 65.008
offset_bottom = 58.968
theme_override_fonts/font = ExtResource("5_3bj2o")
theme_override_font_sizes/font_size = 36
toggle_mode = true
text = "assistir"

[connection signal="pressed" from="CanvasLayer/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="CanvasLayer/voltar" to="." method="_on_voltar_pressed"]
[connection signal="toggled" from="CanvasLayer/Button" to="." method="_on_button_toggled"]
